tests/ok/vector-function-param.ari
fn edge_sum(values: Vec[i64]) -> i64 {
  return len(values) + values[0] + values[len(values) - 1];
}

fn main() -> i64 {
  let three: Vec[i64] = [1, 2, 3];
  let two: Vec[i64] = [4, 5];
  return edge_sum(three) + edge_sum(two);
}
