tests/errors/vector-function-pointer-return-runtime-abi.ari
fn main() -> i64 {
  let op: fn(i64) -> Vec[i64] = main;
  return 0;
}
